--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "type": "git",
     "url": "git+https://github.com/AlexisY0203/quotes-random.git"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
